==> linkenwild/SmartCar/drivers/nrf24l01.c <==
#include "fsl_device_registers.h"
#include "fsl_debug_console.h"
#include "fsl_dspi.h"
#include "board.h"
#include "fsl_common.h"
#include "fsl_port.h"
#include "fsl_gpio.h"
#include "stdio.h"
#include "nrf24l01.h"
#include "delay.h"
#define RF_DSPI_MASTER_BASEADDR SPI1
#define DSPI_MASTER_CLK_SRC DSPI1_CLK_SRC
#define RF_DSPI_MASTER_PCS_FOR_INIT kDSPI_Pcs0
#define RF_DSPI_MASTER_PCS_FOR_TRANSFER kDSPI_MasterPcs0
#define EXAMPLE_DSPI_MASTER_PCS_FOR_TRANSFER kDSPI_MasterPcs0
#define TRANSFER_SIZE 256U        /*! Transfer dataSize */
#define TRANSFER_BAUDRATE 500000U /*! Transfer baudrate - 500k */
#define SPI_READ_REG    0x00  //读配置寄存器,低5位为寄存器地址
#define SPI_WRITE_REG   0x20  //写配置寄存器,低5位为寄存器地址
#define RD_RX_PLOAD     0x61  //读RX有效数据,1~32字节
#define WR_TX_PLOAD     0xA0  //写TX有效数据,1~32字节
#define FLUSH_TX        0xE1  //清除TX FIFO寄存器.发射模式下用
#define FLUSH_RX        0xE2  //清除RX FIFO寄存器.接收模式下用
#define REUSE_TX_PL     0xE3  //重新使用上一包数据,CE为高,数据包被不断发送.
#define NOP             0xFF  //空操作,可以用来读状态寄存器
#define CONFIG          0x00  //配置寄存器地址;bit0:1接收模式,0发射模式;bit1:电选择;bit2:CRC模式;bit3:CRC使能;
#define EN_AA           0x01  //使能自动应答功能  bit0~5,对应通道0~5
#define EN_RXADDR       0x02  //接收地址允许,bit0~5,对应通道0~5
#define SETUP_AW        0x03  //设置地址宽度(所有数据通道):bit1,0:00,3字节;01,4字节;02,5字节;
#define SETUP_RETR      0x04  //建立自动重发;bit3:0,自动重发计数器;bit7:4,自动重发延时 250*x+86us
#define RF_CH           0x05  //RF通道,bit6:0,工作通道频率;

static void spi1_init(void)
{

    uint32_t srcClock_Hz;
    dspi_master_config_t masterConfig;

    /* Master config */
    masterConfig.whichCtar = kDSPI_Ctar0;
    masterConfig.ctarConfig.baudRate = TRANSFER_BAUDRATE;
    masterConfig.ctarConfig.bitsPerFrame = 8U;
    masterConfig.ctarConfig.cpol = kDSPI_ClockPolarityActiveHigh;
    masterConfig.ctarConfig.cpha = kDSPI_ClockPhaseFirstEdge;
    masterConfig.ctarConfig.direction = kDSPI_MsbFirst;
    masterConfig.ctarConfig.pcsToSckDelayInNanoSec = 1000000000U / TRANSFER_BAUDRATE;
    masterConfig.ctarConfig.lastSckToPcsDelayInNanoSec = 1000000000U / TRANSFER_BAUDRATE;
    masterConfig.ctarConfig.betweenTransferDelayInNanoSec = 1000000000U / TRANSFER_BAUDRATE;

    masterConfig.whichPcs = RF_DSPI_MASTER_PCS_FOR_INIT;
    masterConfig.pcsActiveHighOrLow = kDSPI_PcsActiveLow;

    masterConfig.enableContinuousSCK = false;
    masterConfig.enableRxFifoOverWrite = false;
    masterConfig.enableModifiedTimingFormat = false;
    masterConfig.samplePoint = kDSPI_SckToSin0Clock;

    srcClock_Hz = CLOCK_GetFreq(DSPI_MASTER_CLK_SRC);
    DSPI_MasterInit(RF_DSPI_MASTER_BASEADDR, &masterConfig, srcClock_Hz);

  /*中断配置*/    

}

static uint8_t SPI1_ReadWriteByte(uint8_t TxData)
{
  dspi_transfer_t masterXfer;
  uint8_t txdata;
  txdata = TxData;
  /* Set up master transfer for interrupt*/
  DSPI_MasterTransferCreateHandle(RF_DSPI_MASTER_BASEADDR, &g_m_handle, DSPI_MasterUserCallback, NULL);

  /*Start master transfer*/
  masterXfer.txData = &txdata;
  masterXfer.rxData = masterRxData;
  masterXfer.dataSize = 1;
  masterXfer.configFlags = kDSPI_MasterCtar0 | EXAMPLE_DSPI_MASTER_PCS_FOR_TRANSFER | kDSPI_MasterPcsContinuous;
  
  isTransferCompleted = false;
  /* Start master transfer for nonblock*/
//  DSPI_MasterTransferNonBlocking(RF_DSPI_MASTER_BASEADDR, &g_m_handle, &masterXfer);
//  while(!isTransferCompleted);
  /* Start master transfer for block*/
  DSPI_MasterTransferBlocking(RF_DSPI_MASTER_BASEADDR, &masterXfer);

  return masterRxData[0];
}

void NRF24L01_Init(void)
{
  spi1_pin_init();

  Set_NRF24L01_CE;      //初始化时先拉高
  Set_NRF24L01_CSN;     //初始化时先拉高
  
  spi1_init();
  
  Clr_NRF24L01_CE;       //使能24L01
  Set_NRF24L01_CSN;      //SPI片选取消  
}

static uint8_t NRF24L01_Read_Buf(uint8_t regaddr,uint8_t *pBuf,uint8_t datalen)
{
  uint8_t status,uint8_t_ctr;	       
  Clr_NRF24L01_CSN;                     //使能SPI传输
  status=SPI1_ReadWriteByte(regaddr);   //发送寄存器值(位置),并读取状态值   	   
  for(uint8_t_ctr=0;uint8_t_ctr<datalen;uint8_t_ctr++)pBuf[uint8_t_ctr]=SPI1_ReadWriteByte(0XFF);//读出数据
  Set_NRF24L01_CSN;                     //关闭SPI传输
  return status;                        //返回读到的状态值
}

static uint8_t NRF24L01_Write_Buf(uint8_t regaddr, uint8_t *pBuf, uint8_t datalen)
{
  uint8_t status,uint8_t_ctr;	    
  Clr_NRF24L01_CSN;                                    //使能SPI传输
  status = SPI1_ReadWriteByte(regaddr);                //发送寄存器值(位置),并读取状态值
  for(uint8_t_ctr=0; uint8_t_ctr<datalen; uint8_t_ctr++)SPI1_ReadWriteByte(*pBuf++); //写入数据	 
  Set_NRF24L01_CSN;                                    //关闭SPI传输
  return status;                                       //返回读到的状态值
}

static bool NRF24L01_TxPacket(uint8_t *txbuf)
{
  uint8_t state;   
  Clr_NRF24L01_CE;
  NRF24L01_Write_Buf(WR_TX_PLOAD,txbuf,TX_PLOAD_WIDTH);//写数据到TX BUF  32个字节
  Set_NRF24L01_CE;                                     //启动发送	   
  while(READ_NRF24L01_IRQ!=0);                              //等待发送完成
  state=NRF24L01_Read_Reg(STATUS);                     //读取状态寄存器的值	   
  NRF24L01_Write_Reg(SPI_WRITE_REG+STATUS,state);      //清除TX_DS或MAX_RT中断标志
  if(state&MAX_TX)                                     //达到最大重发次数
  {
          NRF24L01_Write_Reg(FLUSH_TX,0xff);               //清除TX FIFO寄存器 
          return false; 
  }
  if(state&TX_OK)                                      //发送完成
  {
          return true;
  }
  return false;                                         //其他原因发送失败
}
